<resources>
    <string name="string_spo2_cali">Calibrating</string>
    <string name="string_heart_waring">Heart rate alarm</string>
    <string name="string_heart_limit">Upper limit of resting heart rate</string>
    <string name="string_logout">Logout</string>
    <string name="string_privacy_agreement">User Agreement</string>
    <string name="string_privacy_desc">Dear users, in order to protect your rights, please understand the user agreement and privacy policy before using this software to understand your legal rights.</string>
    <string name="string_x_watch_take_camera">Remote camera</string>
    <string name="string_b16_step_frequency">frequency</string>
    <string name="string_b16_bmi1">Fat Reduction Index</string>
    <string name="string_b16_bmi2">Effective calories burned</string>
    <string name="string_b16_bmi3">Calorie = fat burning</string>
    <string name="string_b16_bmi4">Staying for 30 days is equivalent to burning fat</string>
    <string name="string_b16_bmi_count">Total</string>
    <string name="string_b16_bmi_time">Fat burning time</string>
    <string name="string_b16_bmi_consume">Fat burning consumption</string>
    <string name="string_b16_bmi_effective">Exercise frequency above 120 can effectively consume fat</string>
    <string name="string_b16_bmi_desc">What is BMI</string>
    <string name="string_b16_bmi_desc_content">Body mass index (BMI, BodyMassIndex) is an important standard for measuring human obesity and health, and is mainly used for statistical analysis. The absolute value of weight cannot be used to determine the degree of obesity. It has a feeling of hot weather and height. Therefore, BMI obtains relatively objective parameters through two values of body weight and height, and uses this parameter to measure the body mass.</string>
    <string name="string_b16_compute_title">Calculation formula</string>
    <string name="string_b16_compute_context">Body mass index BMI = weight / height square (in international units kg / m²) ideal BMI (18.5 ~ 23.9) = weight (unit kg) ÷ height square (in m) according to the standards set by the World Health Organization:</string>
    <string name="string_b16_bmi_table_tr1">BMI classification</string>
    <string name="string_b16_bmi_table_td1">Thin</string>
    <string name="string_b16_bmi_table_td2">Normal</string>
    <string name="string_b16_bmi_table_td3">overweight</string>
    <string name="string_b16_bmi_table_td4">Overweight</string>
    <string name="string_b16_bmi_table_td5">obesity</string>
    <string name="string_b16_bmi_table_td6">Moderate obesity</string>
    <string name="string_b16_bmi_table_td7">Extremely obese</string>
    <string name="string_b16_bmi_table_tr2">WHO standards</string>
    <string name="string_b16_bmi_table_tr3">Asian Standard</string>
    <string name="string_b16_bmi_table_tr4">Risk of related diseases</string>
    <string name="string_b16_bmi_table_tr4_1">Low (but increased risk of other diseases)</string>
    <string name="string_b16_bmi_table_tr4_2">Average</string>
    <string name="string_b16_bmi_table_tr4_3">increase</string>
    <string name="string_b16_bmi_table_tr4_4">Moderate increase</string>
    <string name="string_b16_bmi_table_tr4_5">Severe increase</string>
    <string name="string_b16_bmi_table_tr4_6">Very severe increase</string>
    <string name="string_bmi_title">BMI</string>
    <string name="string_friend_level_title">Friends permission description</string>
    <string name="string_friend_special">Set as special friend</string>
    <string name="string_friend_start">Set as star friend</string>
    <string name="string_friend_normal">Set as a normal friend</string>
    <string name="string_friend_level_desc">Special friends: Only one person can be set, and they have permission to view all data. After setting up special friends, the other party must agree to apply Agree; \n\n Star friends: You can view all data except the physiological period, and set star friends without the consent of friends;\n\nOrdinary friends: You can check step, sleep, heart rate, and blood pressure data with each other.After you apply for consent, you will be ordinary friends by default;</string>
    <string name="string_permis_title">Welcome to RaceFit Pro</string>
    <string name="string_permis_title_desc">When you use RaceFitPro, some features require you to enable the following permissions:</string>
    <string name="string_permis_file_title">File storage</string>
    <string name="string_permis_file_desc">Enable file storage permissions for you to edit user avatar information</string>
    <string name="string_permis_local_title">Location information</string>
    <string name="string_permis_local_desc">Turn on location information permissions to help you find Bluetooth devices attached to your phone and help you quickly search for connected Bluetooth devices</string>
    <string name="string_permis_camera_title">Use camera</string>
    <string name="string_permis_camera_desc">Turn on the camera permission to use the remote camera function and edit user avatar function.</string>
    <string name="string_permis_sms_title">Read sms</string>
    <string name="string_permis_sms_desc">Turn on the read SMS permission to promptly remind you that your phone has received a text message. Please check the text message in a timely manner.</string>
    <string name="string_permis_contact_title">Read address book</string>
    <string name="string_permis_contace_desc">Turn on the permission to read the contact list. When the mobile phone receives an incoming call, the name and phone of the caller will be displayed on the wristband in time, which is convenient for you to check the incoming call information.</string>
    <string name="string_permis_desc_desc">If you do not enable the above permissions, it may affect the normal use of some functions. When using APP, RaceFitPro will protect your personal information according to law.</string>
    <string name="string_permis_go_it">Go it</string>
    <string name="string_privacy_title">Privacy Policy and Service Agreement</string>
    <string name="string_privacy_title_1">Collection of information</string>
    <string name="string_privacy_title_2">Use of personal data</string>
    <string name="string_privacy_title_3">Transmission of personal data</string>
    <string name="string_privacy_title_4">Your rights</string>
    <string name="string_privacy_cancle">Not used</string>
    <string name="string_privacy_agree">Agree</string>
    <string name="string_privacy_str1">The data we collect is based on your interactions with us and your choices, including your privacy settings and the products and features you use. The data we collect may include SOK/API/JS code versions, browsers, Internet service providers, IP addresses, platforms, timestamps, application identifiers, application versions, application distribution channels, independent device identifiers, IOS advertising identifiers Identifier (IDFA), Android advertiser identifier, network card (MAC) address, International Mobile Equipment Identity (IMEI), device model, terminal manufacturer, terminal device operating system version, session start/stop time, language location, time zone, and Network status (WIFi, etc.), hard drive, CPU and battery usage, etc.</string>
    <string name="string_privacy_str2">When you use your account to log in to the App, we will collect the basic information you personally fill out and the health data collected by the smart wearable device. We will store and analyze your data in order to provide you with better data display and health guidance. If you do not want your personal data to be collected, you can log in without an account.</string>
    <string name="string_privacy_str3">Our business may require us to transfer your personal data to countries outside the European Economic Area, which may include China. We take appropriate steps to ensure that the recipients of your personal data fulfill their confidentiality obligations. If you do not want your personal data to be collected and transferred, you can choose to log in without an account.</string>
    <string name="string_privacy_str4">When you use our App, we will collect information as described above. The collection of information is to better optimize and manage the software in order to provide you with better services. For the collection of your personal data, you have the right to choose to log in with or without an account. Logging in with an account will collect your personal data. Logging in without an account will not collect your personal data. If you believe that our processing of your personal data and information violates applicable laws, you can file a complaint with a supervisory authority.</string>
    <string name="string_less_18">&lt;18.5</string>
    <string name="string_more_than_25">>=25</string>
    <string name="string_more_than_23">>=23</string>
    <string name="string_more_than_24">>=24</string>
    <string name="string_more_than_30">>=30</string>
    <string name="string_more_than_40">>=40.0</string>
    <string name="string_bmi_formual">体重指数BMI=体重/身高的平方(国际单位kg/m²)\n 理想BMI(18.5~23.9)=体重(单位kg)÷身高的平方(单位m)  根据世界卫生组织定下的标准：</string>
    <string name="string_bmi_desc">身体质量指数（BMI，BodyMassIndex）是国际上常用的衡量人体肥胖程度和是否健康的重要标准，主要用于统计分析。肥胖程度的判断不能采用体重的绝对值，它天然与身高
有关。因此，BMI通过人体体重和身高两个数值获得相对客观的参数，并用这个参数所处范围衡量身体质量。</string>
    <string name="string_note">Note:</string>
    <string name="string_light_alert">The highest brightness setting results in faster power consumption and shorter battery life.</string>
    <string name="string_wrist_alert">A higher sensitivity setting results in faster power consumption and shorter battery life.</string>
    <string name="smart_watch_noti">Smartwatch notification</string>
    <string name="app_firm_version">Firmware version</string>
    <string name="string_ota_dev_ready">Wait a minute... The equipment is in preparation</string>
    <string name="string_ota_uccess">Successful upgrade</string>
    <string name="more_opera">More operations</string>
    <string name="string_long_time">Delay reminder</string>
    <string name="string_res_alarm">reset your alarm？</string>
    <string name="string_res_ing">Reset...</string>
    <string name="string_radeing">Loading...</string>
    <string name="strinf_up_data_getvis">Get version...</string>
    <string name="string_rade_updata">Ready to complete updateable</string>
    <string name="string_updata_error_isup">Upgrade failed to be re-updated</string>
    <string name="string_updata_error_tryup">Upgrade failed Try to update again</string>
    <string name="msg_center">Message Center</string>
    <string name="string_msg_basic_requ">Basic requirements for notifications</string>
    <string name="string_basic_cont1">1.Make sure RaceFitPro is running and connected to the device</string>
    <string name="string_basic_cont2">2.Make sure RaceFitPro has set up power consumption protection</string>
    <string name="string_basic_cont3">3.Make sure RaceFitPro has set up autorun permission</string>
    <string name="string_basic_cont4">4.Confirm that RaceFitPro has set up system or mobile housekeeper whitelist protection</string>
    <string name="string_apps_alert_title">Q:Why applications such as FaceBook、QQ、Wechat have no notifications?</string>
    <string name="string_apps_cont1">1.Make sure FaceBook、QQ、Wechat and other applications allow displaying message on notification bar</string>
    <string name="string_apps_cont2">2.Disable the RaceFitPro notification permission and enable it again</string>
    <string name="string_to_restart">To restart</string>
    <string name="string_call_phone_alert">Q:Why there is no incoming call alert?</string>
    <string name="string_call_phone_cont1">1.Make sure you have enable the contacts permission</string>
    <string name="string_call_phone_cont2">2.Make sure you have enabled phone call permission</string>
</resources>