<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_marginLeft="15dp"
    android:scrollbars="none"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:background="#EBEBEB"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr2"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr3"/>



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="120dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr4"/>



    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="#EBEBEB"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_td1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="≤18.5"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="≤18.5"/>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="120dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr4_1"/>



    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="#EBEBEB"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_td2"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="18.5~24.9"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="18.5~22.9"/>



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="120dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr4_2"/>



    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="#EBEBEB"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_td3"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="≥25"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="≥23"/>



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="120dp"
            style="@style/B16BMIStyle"
            android:text=""/>



    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="#EBEBEB"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_td4"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="25.0~29.9"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="23~24.9"/>



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="120dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr4_3"/>



    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="#EBEBEB"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_td5"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="30~34.9"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="25~29.9"/>



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="120dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr4_4"/>



    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="#EBEBEB"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_td6"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="35.0~39.9"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="≥30"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="120dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr4_5"/>



    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="#EBEBEB"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_td7"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>



        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text="≥40"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="80dp"
            style="@style/B16BMIStyle"
            android:text=""/>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#EBEBEB"/>

        <TextView
            android:layout_width="120dp"
            style="@style/B16BMIStyle"
            android:text="@string/string_b16_bmi_table_tr4_6"/>



    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="#EBEBEB"/>
    </LinearLayout>

</HorizontalScrollView>