<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/string_permis_title"
        android:textColor="@color/contents_text"
        android:layout_marginTop="25dp"
        android:textSize="20sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/string_permis_title_desc"
        android:textSize="16sp" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/permissImg1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/privacy_file"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/requesetTv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_permis_file_title"
                    android:textColor="@color/contents_text"
                    android:textSize="@dimen/size_18"
                    app:layout_constraintLeft_toRightOf="@+id/permissImg1"

                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/string_permis_file_desc"
                    app:layout_constraintLeft_toRightOf="@id/permissImg1"
                    app:layout_constraintTop_toBottomOf="@id/requesetTv1" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/permissImg2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/privacy_position"
                    tools:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/requesetTv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_permis_local_title"
                    android:textColor="@color/contents_text"
                    android:textSize="@dimen/size_18"
                    app:layout_constraintLeft_toRightOf="@+id/permissImg2"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/string_permis_local_desc"
                    app:layout_constraintLeft_toRightOf="@id/permissImg2"
                    app:layout_constraintTop_toBottomOf="@id/requesetTv2" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/permissImg3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/privacy_camera"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/requesetTv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_permis_camera_title"
                    android:textColor="@color/contents_text"
                    android:textSize="@dimen/size_18"
                    app:layout_constraintLeft_toRightOf="@+id/permissImg3"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_permis_camera_desc"
                    app:layout_constraintLeft_toRightOf="@id/permissImg3"
                    app:layout_constraintTop_toBottomOf="@id/requesetTv3" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/permissImg4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/privacy_calendar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/requesetTv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_permis_sms_title"
                    android:textColor="@color/contents_text"
                    android:textSize="@dimen/size_18"
                    app:layout_constraintLeft_toRightOf="@+id/permissImg4"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_permis_sms_desc"
                    app:layout_constraintLeft_toRightOf="@id/permissImg4"
                    app:layout_constraintTop_toBottomOf="@id/requesetTv4" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/permissImg5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/privacy_file"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/requesetTv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_permis_contact_title"
                    android:textColor="@color/contents_text"
                    android:textSize="@dimen/size_18"
                    app:layout_constraintLeft_toRightOf="@+id/permissImg5"

                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_permis_contace_desc"
                    app:layout_constraintLeft_toRightOf="@id/permissImg5"
                    app:layout_constraintTop_toBottomOf="@id/requesetTv5" />


            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="17sp"
            android:text="@string/string_permis_desc_desc"/>


        <Button
            android:id="@+id/permissBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/string_permis_go_it"
            android:textColor="@color/white"
            android:background="@drawable/login_selector"/>


    </LinearLayout>

</LinearLayout>